﻿
todo:
isRebootRequested : http://askubuntu.com/questions/28530/how-can-i-tell-what-package-requires-a-reboot-of-my-system


##################################################################

opsi-winst/opsi-script (4.12.0.8) stable; urgency=low

  * start to wor on new modifier '/encoding <encoding>' for patches sections
  * osparser: fix Message 'ReportMessages' changed to 'ScriptErrorMessages'
  * osparser: fix Message 'ScriptErrorMessages' 'is set to' true/false was wrong
  * osparser:  tsImportLib: replace constants

-- Detlef Oertel <d.oertel@uib.de>  Mon, 06 Nov 2017:15:00:00 +0200


opsi-winst/opsi-script (4.12.0.7) stable; urgency=low

  * default loglevel is now 7 (was 6) (osconf)
  * new config: opsi-script.global.ScriptErrorMessages : boolean ; default=true (created as false)
  * config: opsi-script.global.default_loglevel will be created as 7

-- Detlef Oertel <d.oertel@uib.de>  Tue, 10 Oct 2017:15:00:00 +0200

opsi-winst/opsi-script (4.12.0.6) stable; urgency=low

  * osconf: readConfigFromService reads configstates:
     opsi-script.global.ScriptErrorMessages : boolean ; default=true (created as false)
     opsi-script.global.AutoActivityDisplay : boolean ; default=false  (created as true)
  * general: adjusting log levels
    5:LLNotice: comments,messages, Execution of sections
    6:LLInfo; Statements, New values for stringvars , complete boolean expression
    7: new values for stringlist vars, Output from sections,
       shellcall if the output is not written to a stringlist, parts of a boolean expression
    8: other stringlist output
    9: content of saved temporary files
  * osdefinedfunctions: TOsDefinedFunction.call: move inc(inDefinedFuncNestCounter)
    below parseCallParameter
  * new stringlistfunction editMap(list) : list; gets a key=value list and allows the user to modify the values

-- Detlef Oertel <d.oertel@uib.de>  Wed, 27 Sep 2017:15:00:00 +0200


opsi-winst/opsi-script (4.12.0.5) stable; urgency=low
