@@ -21,7 +21,7 @@
       <UseVersionInfo Value="True"/>
       <MajorVersionNr Value="4"/>
       <MinorVersionNr Value="12"/>
-      <BuildNr Value="7"/>
+      <BuildNr Value="9"/>
       <StringTable Comments="Compiled with Lazarus 1.6.4 / FPC 3.0.2" CompanyName="uib gmbh (uib.de / opsi.org)" FileDescription="opsi-script" InternalName="winst64.exe" LegalCopyright="AGPL v3" LegalTrademarks="opsi / opsi.org / open pc server integration" OriginalFilename="winst64.exe" ProductName="opsi-script" ProductVersion="4.0.7"/>
     </VersionInfo>
     <BuildModes Count="4" Active="Release">
@@ -463,9 +463,8 @@
       </Unit27>
       <Unit28>
         <Filename Value="changelog.txt"/>
-        <IsVisibleTab Value="True"/>
         <EditorIndex Value="1"/>
-        <CursorPos X="23" Y="12"/>
+        <CursorPos X="70" Y="13"/>
         <UsageCount Value="100"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="None"/>
@@ -677,9 +676,10 @@
       <Unit53>
         <Filename Value="osmain.pas"/>
         <IsPartOfProject Value="True"/>
+        <IsVisibleTab Value="True"/>
         <EditorIndex Value="5"/>
-        <TopLine Value="1403"/>
-        <CursorPos X="48" Y="1433"/>
+        <TopLine Value="2006"/>
+        <CursorPos X="84" Y="2025"/>
         <UsageCount Value="204"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
@@ -768,7 +768,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="34"/>
+        <UsageCount Value="36"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit65>
       <Unit66>
@@ -778,7 +778,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="30"/>
+        <UsageCount Value="32"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit66>
       <Unit67>
@@ -788,7 +788,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="30"/>
+        <UsageCount Value="32"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit67>
       <Unit68>
@@ -798,7 +798,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="30"/>
+        <UsageCount Value="32"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit68>
       <Unit69>
@@ -808,7 +808,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="30"/>
+        <UsageCount Value="32"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit69>
       <Unit70>
@@ -818,7 +818,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="30"/>
+        <UsageCount Value="32"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit70>
       <Unit71>
@@ -828,7 +828,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="30"/>
+        <UsageCount Value="32"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit71>
       <Unit72>
@@ -838,7 +838,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="30"/>
+        <UsageCount Value="32"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit72>
       <Unit73>
@@ -848,7 +848,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="30"/>
+        <UsageCount Value="32"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit73>
       <Unit74>
@@ -858,7 +858,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="30"/>
+        <UsageCount Value="32"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit74>
       <Unit75>
@@ -867,7 +867,7 @@
         <EditorIndex Value="7"/>
         <TopLine Value="430"/>
         <CursorPos Y="472"/>
-        <UsageCount Value="30"/>
+        <UsageCount Value="32"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit75>
@@ -878,7 +878,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="30"/>
+        <UsageCount Value="32"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit76>
       <Unit77>
@@ -898,129 +898,133 @@
         <EditorIndex Value="16"/>
         <TopLine Value="7"/>
         <CursorPos X="58" Y="42"/>
-        <UsageCount Value="25"/>
+        <UsageCount Value="27"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit78>
     </Units>
-    <JumpHistory Count="29" HistoryIndex="28">
+    <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
-        <Filename Value="osparser.pas"/>
-        <Caret Line="10397" Column="36" TopLine="10372"/>
+        <Filename Value="osfuncwin2.pas"/>
+        <Caret Line="1300" Column="14" TopLine="46"/>
       </Position1>
       <Position2>
-        <Filename Value="osparser.pas"/>
-        <Caret Line="10499" Column="40" TopLine="10474"/>
+        <Filename Value="osfuncwin2.pas"/>
+        <Caret Line="1402" Column="8" TopLine="1385"/>
       </Position2>
       <Position3>
-        <Filename Value="osparser.pas"/>
-        <Caret Line="3223" Column="19" TopLine="3201"/>
+        <Filename Value="osfuncwin2.pas"/>
+        <Caret Line="2136" Column="35" TopLine="2056"/>
       </Position3>
       <Position4>
-        <Filename Value="osparser.pas"/>
-        <Caret Line="10499" Column="12" TopLine="10474"/>
+        <Filename Value="osfuncwin2.pas"/>
+        <Caret Line="2192" Column="6" TopLine="2164"/>
       </Position4>
       <Position5>
-        <Filename Value="osparser.pas"/>
-        <Caret Line="3239" Column="23" TopLine="3201"/>
+        <Filename Value="osfuncwin2.pas"/>
+        <Caret Line="2253" Column="10" TopLine="2221"/>
       </Position5>
       <Position6>
         <Filename Value="osparser.pas"/>
-        <Caret Line="10559" Column="12" TopLine="10483"/>
+        <Caret Line="10683" Column="33" TopLine="10658"/>
       </Position6>
       <Position7>
-        <Filename Value="osparser.pas"/>
-        <Caret Line="7510" Column="20" TopLine="7485"/>
+        <Filename Value="osfuncwin2.pas"/>
+        <Caret Line="2277" Column="33" TopLine="2243"/>
       </Position7>
       <Position8>
-        <Filename Value="osparser.pas"/>
-        <Caret Line="8135" Column="21" TopLine="8110"/>
+        <Filename Value="osfuncwin2.pas"/>
+        <Caret Line="2306" Column="47" TopLine="2291"/>
       </Position8>
       <Position9>
-        <Filename Value="osparser.pas"/>
-        <Caret Line="8351" Column="12" TopLine="8326"/>
+        <Filename Value="osfunc.pas"/>
+        <Caret Line="420" Column="10" TopLine="394"/>
       </Position9>
       <Position10>
         <Filename Value="osparser.pas"/>
-        <Caret Line="8560" Column="14" TopLine="8535"/>
+        <Caret Line="11892" Column="16" TopLine="11867"/>
       </Position10>
       <Position11>
-        <Filename Value="osparser.pas"/>
-        <Caret Line="9132" Column="25" TopLine="9112"/>
+        <Filename Value="oslistedit.pas"/>
+        <Caret Line="2" Column="19"/>
       </Position11>
       <Position12>
         <Filename Value="osparser.pas"/>
-        <Caret Line="3226" Column="21" TopLine="3201"/>
+        <Caret Line="16767" Column="36" TopLine="16739"/>
       </Position12>
       <Position13>
-        <Filename Value="osparser.pas"/>
-        <Caret Line="10509" Column="72" TopLine="10492"/>
+        <Filename Value="osmain.pas"/>
+        <Caret Line="1433" Column="48" TopLine="1403"/>
       </Position13>
       <Position14>
-        <Filename Value="osparser.pas"/>
-        <Caret Line="3239" Column="16" TopLine="3201"/>
+        <Filename Value="osmain.pas"/>
+        <Caret Line="2064" Column="22" TopLine="2055"/>
       </Position14>
       <Position15>
-        <Filename Value="wispecfolder.pas"/>
-        <Caret Line="50" Column="6" TopLine="23"/>
+        <Filename Value="osmain.pas"/>
+        <Caret Line="2021" Column="36" TopLine="1984"/>
       </Position15>
       <Position16>
-        <Filename Value="osfuncwin2.pas"/>
-        <Caret Line="45" Column="15" TopLine="16"/>
+        <Filename Value="osmain.pas"/>
+        <Caret Line="2135" Column="39" TopLine="2092"/>
       </Position16>
       <Position17>
-        <Filename Value="osfuncwin2.pas"/>
-        <Caret Line="36" TopLine="10"/>
+        <Filename Value="osmain.pas"/>
+        <Caret Line="1992" Column="40" TopLine="1900"/>
       </Position17>
       <Position18>
-        <Filename Value="osfuncwin2.pas"/>
-        <Caret Line="1300" Column="14" TopLine="46"/>
+        <Filename Value="osmain.pas"/>
+        <Caret Line="2371" Column="44" TopLine="2333"/>
       </Position18>
       <Position19>
-        <Filename Value="osfuncwin2.pas"/>
-        <Caret Line="1402" Column="8" TopLine="1385"/>
+        <Filename Value="osmain.pas"/>
+        <Caret Line="1743" Column="5" TopLine="1724"/>
       </Position19>
       <Position20>
-        <Filename Value="osfuncwin2.pas"/>
-        <Caret Line="2136" Column="35" TopLine="2056"/>
+        <Filename Value="osmain.pas"/>
+        <Caret Line="2353" Column="73" TopLine="2348"/>
       </Position20>
       <Position21>
-        <Filename Value="osfuncwin2.pas"/>
-        <Caret Line="2192" Column="6" TopLine="2164"/>
+        <Filename Value="osmain.pas"/>
+        <Caret Line="2799" Column="13" TopLine="2477"/>
       </Position21>
       <Position22>
-        <Filename Value="osfuncwin2.pas"/>
-        <Caret Line="2253" Column="10" TopLine="2221"/>
+        <Filename Value="osmain.pas"/>
+        <Caret Line="2015" Column="34" TopLine="2000"/>
       </Position22>
       <Position23>
-        <Filename Value="osparser.pas"/>
-        <Caret Line="10683" Column="33" TopLine="10658"/>
+        <Filename Value="osmain.pas"/>
+        <Caret Line="1181" Column="11" TopLine="1162"/>
       </Position23>
       <Position24>
-        <Filename Value="osfuncwin2.pas"/>
-        <Caret Line="2277" Column="33" TopLine="2243"/>
+        <Filename Value="osmain.pas"/>
+        <Caret Line="943" Column="5" TopLine="924"/>
       </Position24>
       <Position25>
-        <Filename Value="osfuncwin2.pas"/>
-        <Caret Line="2306" Column="47" TopLine="2291"/>
+        <Filename Value="osmain.pas"/>
+        <Caret Line="986" Column="5" TopLine="967"/>
       </Position25>
       <Position26>
-        <Filename Value="osfunc.pas"/>
-        <Caret Line="420" Column="10" TopLine="394"/>
+        <Filename Value="osmain.pas"/>
+        <Caret Line="1194" Column="11" TopLine="1175"/>
       </Position26>
       <Position27>
-        <Filename Value="osparser.pas"/>
-        <Caret Line="11892" Column="16" TopLine="11867"/>
+        <Filename Value="osmain.pas"/>
+        <Caret Line="1400" Column="3" TopLine="1381"/>
       </Position27>
       <Position28>
-        <Filename Value="oslistedit.pas"/>
-        <Caret Line="2" Column="19"/>
+        <Filename Value="osmain.pas"/>
+        <Caret Line="1479" Column="5" TopLine="1460"/>
       </Position28>
       <Position29>
-        <Filename Value="osparser.pas"/>
-        <Caret Line="16767" Column="36" TopLine="16739"/>
+        <Filename Value="osmain.pas"/>
+        <Caret Line="2024" TopLine="2002"/>
       </Position29>
+      <Position30>
+        <Filename Value="osmain.pas"/>
+        <Caret Line="2020" Column="16" TopLine="2003"/>
+      </Position30>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
